fix positioning on mobile safari

--- a/css/styles-sass.scss
+++ b/css/styles-sass.scss
@@ -89,7 +89,7 @@ h4.card-title {
     transform: translateY(-50%);
 
       @media screen and (max-width: 399px){ 
-      -webkit-transform: translateY(25%);
+      -webkit-transform: translateY(-50%);
     } 
    
 }
